discussion/kv_engine/183265/183265_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Drop ModifyCollection events

If a collection is dropped, the modify event must be purged
along with any normal collection items. All of the dropKey
paths were setup to ignore any system events, this is no
longer true with the new event.

Change-Id: Ia89d4b7a56e9f3b5b23dd176e5d00da88bd83f3e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-12-01 15:54:33.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-12-01 15:55:04.000000000
Message: 
Patch Set 6: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/327595/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-01 16:40:00.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/629/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/629/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/819/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/scan_context.cc(38): error C2653: "SystemEventFactory": is not a class or namespace name ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/819/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/655/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23: error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
        auto modify = SystemEventFactory::isModifyCollection(key);
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/655/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/655/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/674/ : FAILURE

Compile error at [2022-12-01T16:26:31.728Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/674/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/677/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-12-01T16:30:15.834Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-12-01T16:30:15.834Z] Value of: dropped.empty()
[2022-12-01T16:30:15.834Z]   Actual: false
[2022-12-01T16:30:15.834Z] Expected: true
[2022-12-01T16:30:15.834Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (14 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/677/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/917/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `420250" to be less than or equal to `393216" - Unexpected fileSize for vbucket)
[2022-12-01T16:11:46.099Z] (444 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/917/ )

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-12-01T16:19:58.886Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-12-01T16:19:58.886Z] Value of: dropped.empty()
[2022-12-01T16:19:58.886Z]   Actual: false
[2022-12-01T16:19:58.886Z] Expected: true
[2022-12-01T16:19:58.886Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (146 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/917/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/666/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-12-01T16:26:46.518Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-12-01T16:26:46.518Z] Value of: dropped.empty()
[2022-12-01T16:26:46.518Z]   Actual: false
[2022-12-01T16:26:46.518Z] Expected: true
[2022-12-01T16:26:46.518Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (54 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/666/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/665/ : FAILURE

Compile error at [2022-12-01T16:29:17.985Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/665/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/655/ : FAILURE

Compile error at [2022-12-01T16:00:51.739Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/655/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21601/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/647/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
